<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.confederatedtechnologies.Comms</groupId>
    <artifactId>commsgluon</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>CommsGluon</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <javafx.version>23</javafx.version>
        <attach.version>4.0.19</attach.version>
        <gluonfx.plugin.version>1.0.24</gluonfx.plugin.version>
        <javafx.plugin.version>0.0.8</javafx.plugin.version>
        <mainClassName>com.confederatedtechnologies.Comms.CommsApp</mainClassName>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq</groupId>
            <artifactId>charm-glisten</artifactId>
            <version>6.2.3</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>display</artifactId>
            <version>${attach.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>lifecycle</artifactId>
            <version>${attach.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>statusbar</artifactId>
            <version>${attach.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>storage</artifactId>
            <version>${attach.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>util</artifactId>
            <version>${attach.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.3.232</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>Gluon</id>
            <url>https://nexus.gluonhq.com/nexus/content/repositories/releases</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.plugin.version}</version>
                <configuration>
                    <mainClass>${mainClassName}</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <id>default</id>
                        <configuration>
                            <mainClass>${mainClassName}</mainClass>
                            <addModules>javafx.base,javafx.graphics,javafx.fxml,javafx.controls</addModules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.5</version>
                <configuration>
                    <input>target/</input>
                    <verbose>true</verbose>
                    <type>APP_IMAGE</type>
                    <mainClass>${mainClassName}</mainClass>
                    <icon>${project.basedir}/src/main/resources/icon.png</icon>
                    <destination>
                        jpackage
                    </destination>
                    <mainJar>commsgluon-1.0-SNAPSHOT.jar</mainJar>
                    <javaOptions>
                        <javaOption>-Xmx6192m</javaOption>
                        <javaOption>-Xms4096m</javaOption>
                        <javaOption>-XX:+UnlockExperimentalVMOptions</javaOption>
                        <javaOption>-XX:+OptimizeStringConcat</javaOption>
                        <javaOption>-XX:+UseCodeCacheFlushing</javaOption>
                        <javaOption>-Djavafx.animation.pulse=16</javaOption>
                        <javaOption>-XX:+UseZGC</javaOption>
                        <javaOption>-XX:+ZGenerational</javaOption>
                        <javaOption>-XX:+UseStringDeduplication</javaOption>
                        <javaOption>-XX:+TieredCompilation</javaOption>
                        <javaOption>-XX:CompileThreshold=1000</javaOption>
                        <javaOption>-Djavafx.animation.fullspeed=true</javaOption>
                        <javaOption>-XshowSettings:vm</javaOption>
                        <javaOption>-Xlog:gc*</javaOption>
                        <javaOption>-XX:+UseNUMA</javaOption>
                        <javaOption>-XX:+AlwaysPreTouch</javaOption>
                        <javaOption>-XX:+UseCompressedOops</javaOption>
                    </javaOptions>
                    <addModules>javafx.controls,javafx.fxml,javafx.base,javafx.graphics,java.base,java.desktop,java.logging,java.scripting,jdk.jfr,jdk.unsupported</addModules>
                    <modulePaths>
                        <modulePath>/home/cahlien/.m2/repository/org/openjfx/javafx-base/23-ea+22</modulePath>
                        <modulePath>/home/cahlien/.m2/repository/org/openjfx/javafx-controls/23-ea+22</modulePath>
                        <modulePath>/home/cahlien/.m2/repository/org/openjfx/javafx-fxml/23-ea+22</modulePath>
                        <modulePath>/home/cahlien/.m2/repository/org/openjfx/javafx-graphics/23-ea+22</modulePath>
                    </modulePaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>all</shadedClassifierName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx.plugin.version}</version>
                <configuration>
                    <target>${gluonfx.target}</target>
                    <graalvmHome>/storage/linux/applications/gluon-graal23/graalvm-java23-linux-amd64-gluon-23+25.1-dev</graalvmHome>
                    <attachList>
                        <list>display</list>
                        <list>lifecycle</list>
                        <list>statusbar</list>
                        <list>storage</list>
                    </attachList>
                    <nativeImageArgs>
                        <arg>--enable-all-security-services</arg>
                        <arg>-g</arg>
                        <arg>--no-fallback</arg>
                        <arg>--report-unsupported-elements-at-runtime</arg>
                        <arg>--initialize-at-build-time=all</arg>
                        <arg>-H:+AllowIncompleteClasspath</arg>
                        <arg>-H:+ReportUnsupportedElementsAtRuntime</arg>
                        <arg>--initialize-at-build-time=org.sqldroid</arg>
                    </nativeImageArgs>
                    <mainClass>${mainClassName}</mainClass>
                    <verbose>true</verbose>
                </configuration>
            </plugin>
    </plugins>

    <resources>
        <resource>
            <directory>src/main/resources</directory>
            <includes>
                <include>**/*.fxml</include>
                <include>**/*.css</include>
                <include>**/*.properties</include>
                <include>**/*.png</include>
                <include>**/*.json</include>
                <include>META-INF/native-image/**</include>
            </includes>
        </resource>
        <resource>
            <directory>db</directory>
            <includes>
                <include>**/*.db</include>
            </includes>
        </resource>
    </resources>
    </build>

    <profiles>
        <profile>
            <id>ios</id>
            <properties>
                <gluonfx.target>ios</gluonfx.target>
            </properties>
        </profile>
        <profile>
            <id>android</id>
            <properties>
                <gluonfx.target>android</gluonfx.target>
            </properties>
        </profile>
        <profile>
            <id>desktop</id>
            <properties>
                <gluonfx.target>desktop</gluonfx.target>
            </properties>
        </profile>
    </profiles>
</project>
